--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
 
         <nav>
             <ul>
-                <li>
-                    HOME</li>
+                <li>HOME</li>
                 <li>PROGRAMS</li>
                 <li>MEMBERSHIP</li>
                 <li>
-                    <a href="./components/login/login.html">LOGIN</a>
-                </li>
+                    <a href="./components/login/login.html">LOGIN</a></li>
                 <li>REGISTER</li>
             </ul>
         </nav>
